Fixed width issues on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ h4 {
 
 .app {
   position: absolute;
+  width: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
